--- a/css/record_video.css
+++ b/css/record_video.css
@@ -1,10 +1,10 @@
 .wp-video-capture-flash-container,
 .wp-video-capture-desktop {
-  display: none;
+  display: none !important;
 }
 
 .wp-video-capture-progress-container {
-  display: none;
+  display: none !important;
   padding: 20px 0 20px 0;
 }
 
@@ -18,11 +18,11 @@
 }
 
 .wp-video-capture-file-selector {
-  display: none;
+  display: none !important;
 }
 
 .wp-video-capture-terms-and-conditions {
-  display: none;
+  display: none !important;
   margin-top: 20px;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .wp-video-capture-upload-button {
-  display: none;
+  display: none !important;
 }
 
 .wp-video-capture-upload-button img {
@@ -49,7 +49,7 @@
 .wp-video-capture-ajax-success-upload,
 .wp-video-capture-ajax-error-store,
 .wp-video-capture-ajax-error-upload {
-  display: none;
+  display: none !important;
   color: #000;
   font-weight: bold;
   margin-bottom: 10px;
